2023-08-19  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin: CWEB 4.10 release.

2023-06-28  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Format 'common' with 'ctwill'.

2023-06-26  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Purge 'init_p'.

2023-06-21  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Match common.w with common.h.

2023-07-18  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin: Discard rest of overfull input line.

2023-07-17  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Deal with malign user input.

2023-07-09  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin: Regenerate boot source.

2023-06-20  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Changes in cwebdir/comm-w2c.h.

2023-06-18  Karl Berry  <karl@freefriends.org>

	* am/cweb.am (dist_bin_SCRIPTS): new script cwebdir/ctwill-proofsort.
	(TESTS): rearrange to keep all info for a given test together.

2023-06-17  Andreas Scherer  <https://ascherer.github.io>

	* Makefile.in: Integrate cwebdir/ctwill.test; run reautoconf.

2023-03-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/fn-generate.perl:
	Skip tests for Shift_JIS & EUC-JP if conversion failed.
	Report from Ken Moffat.
	https://tug.org/pipermail/tex-k/2023-March/003911.html

2023-02-14  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* tests/fn-generate.perl:
	Avoid errors on parallel test processing.
	Report from Ken Brown.

2023-02-13  Karl Berry  <karl@freefriends.org>

	* enctexdir/enctex-pdftex.ch: move "\special shipout"
	change here, from enctex2.ch, so it is not applied to tex (which
	doesn't have it).

2023-02-12  Phelype Oleinik <phe.h.o1@gmail.com>
        and Karl Berry  <karl@freefriends.org>

	* enctexdir/enctex2.ch: make parallel change for ``late''
	\special shipout. This code is what avoids the invalid